# cdext

./: CMakeLists.txt  INSTALL  LICENSE  Makefile.old  README  ccd.c  cd-ext.c  cd-ext.h  cdext-multi.c  cdext-setup.bash  cdext-setup.csh  cdext-setup.ksh  cdext-setup.sh  cdext.1  cdext.spec  configure-cdext  delete.c  list.c  parse.c  parse.h  save.c  setcd.c
scripts/: build
